# iconwear-kde

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  DEPENDENCIES.md  README.md  tmp_wear_test.qml
PSI/: SRS_IconWear_KDE.md
src/daemon/: CMakeLists.txt  main.cpp  usagetracker.cpp  usagetracker.h
src/plasmoid/: metadata.json
src/plasmoid/contents/ui/: WearShader.qml  main.qml
